# MokaReads-Core

./: .gitignore  404.html  CNAME  Cargo.toml  README.md  all.html  crates.js  help.html  index.html  print.html  search-index.js  searchindex.js  settings.html  sidebar-items.js  src-files.js  struct.CategoryBuilder.html  struct.Channel.html  struct.ChannelBuilder.html  struct.Enclosure.html  struct.Image.html  struct.ImageBuilder.html  struct.TextInput.html
.github/workflows/: main.yml  rust.yml
api/: index.html
awesome_lists/: index.html  sidebar-items.js  struct.Repository.html
benches/: find_or_search.rs  par_vs_sync.rs  parsers.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md  articles.md  cheat_sheets.md
examples/: awesome.rs  awesome_page_limit.rs  latex.rs  searcher.rs
extension/: index.html  struct.Extension.html  struct.ExtensionBuilder.html
extension/dublincore/: struct.DublinCoreExtension.html  struct.DublinCoreExtensionBuilder.html
extension/itunes/: constant.NAMESPACE.html  struct.ITunesCategoryBuilder.html  struct.ITunesChannelExtension.html  struct.ITunesItemExtensionBuilder.html  struct.ITunesOwnerBuilder.html
html/: articles.html  cheat_sheets.html  index.html  searchindex.json
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/mokareads_core/resources/: trait.Parser.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
mokareads-macros/: Cargo.toml
mokareads-macros/src/: lib.rs
mokareads_core/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.Category.html  struct.Channel.html  struct.Cloud.html  struct.CloudBuilder.html  struct.EnclosureBuilder.html  struct.Guid.html  struct.GuidBuilder.html  struct.Item.html  struct.ItemBuilder.html  struct.Source.html  struct.SourceBuilder.html  struct.TextInputBuilder.html  type.Result.html
mokareads_core/api/: enum.Api.html  enum.Branch.html  index.html  sidebar-items.js
mokareads_core/awesome_lists/: struct.AwesomeList.html
mokareads_core/extension/: type.ExtensionMap.html
mokareads_core/extension/dublincore/: constant.NAMESPACE.html  index.html
mokareads_core/extension/itunes/: index.html  struct.ITunesCategory.html  struct.ITunesChannelExtensionBuilder.html  struct.ITunesItemExtension.html  struct.ITunesOwner.html
mokareads_core/extension/syndication/: constant.NAMESPACE.html  enum.UpdatePeriod.html  index.html  (+2 more)
mokareads_core/resources/: enum.ResourceType.html  index.html  sidebar-items.js  struct.Cacher.html  struct.SearchMetadata.html  struct.Searcher.html  trait.Parser.html
resources/: index.html  struct.Searcher.html  trait.Parser.html
resources/article/: fn.articles_rss.html  struct.Article.html
resources/cheatsheet/: index.html  sidebar-items.js  struct.Cheatsheet.html  struct.Metadata.html
resources/guide/: sidebar-items.js
src/: api.rs  awesome_lists.rs  bench.rs  cpi.rs  latex.rs  lib.rs  prices.rs  resources.rs
src/cpi/: observation.rs
src/mokareads_core/: api.rs.html  awesome_lists.rs.html  lib.rs.html  resources.rs.html
src/products/: product.rs
src/resources/: article.rs  cheatsheet.rs  guide.rs
tests/: articles.rs
(+19 files in other folders)
