[package]
name = "mokareads-core"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
pulldown-cmark = "0.9.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
mokareads_macros = { path = "mokareads-macros" }
[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
lipsum = "0.9.0"


