[package]
name = "mokareads-core"
version = "0.5.0"
edition = "2021"
authors = ["Mustafif Khan <mustafif0929@gmail.com>", "MoKa Reads <help@mokareads.org>"]
description = "The Core Library for MoKa Reads Software"
license-file = "LICENSE.md"
homepage = "https://mokareads.org"
repository = "https://github.com/Moka-Reads/MokaReads-Core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
path = "benches/par_vs_sync.rs"
name = "par_vs_sync"
harness = false


[dependencies]
pulldown-cmark = "0.9.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
mokareads_macros = { path = "mokareads-macros" }
rss = "2.0.4"
chrono = "0.4.26"
pandoc = { version = "0.8.10", optional = true }
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.97"
rocket = "0.5.0-rc.3"

[features]
default = []
experimental = ["pandoc"]


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rayon = "1.7.0"
lipsum = "0.9.0"
rand = "0.8.5"

# Build optimizations
[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1